fix: CHARTS-4414 change the background color to match tha chart's background color in dark mode

--- a/examples/unauthenticated/assets/styles.css
+++ b/examples/unauthenticated/assets/styles.css
@@ -75,7 +75,7 @@ span {
 }
 
 .dark-mode {
-  background-color: #061621;
+  background-color: #21313c; /* to match the chart's background */
   color: #ffffff;
 }
 
